updated ArgumentTracker